gitops/nonprod/sample-app/mongo-writer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-writer
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-writer
  template:
    metadata:
      labels:
        app: mongo-writer
    spec:
      containers:
        - name: mongo-writer
          image: 842303506852.dkr.ecr.eu-west-1.amazonaws.com/cloud-native-mongo-writer:7c86237

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
